--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+         <button onclick="loadExam('haramayaa')">haramayaa Exam</button>
           <button onclick="loadExam('AMBO')">AMBO Exam</button>
           <button onclick="loadExam('ADAMA')">ADAMA Exam</button>
         <button onclick="loadExam('WSU1')">WSU1 Exam</button>
@@ -46,3 +47,4 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
