--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+          <button onclick="loadExam(' exit exam')">exit Exam</button>
          <button onclick="loadExam('haramayaa')">haramayaa Exam</button>
           <button onclick="loadExam('AMBO')">AMBO Exam</button>
           <button onclick="loadExam('ADAMA')">ADAMA Exam</button>
@@ -47,4 +48,5 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
