--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+         <button onclick="loadExam('Finfinnee')">Finfinnee Exam</button>
          <button onclick="loadExam('Arbaminch')">Arbaminch Exam</button>
           <button onclick="loadExam('exit exam')">exit Exam</button>
          <button onclick="loadExam('haramayaa')">haramayaa Exam</button>
@@ -49,6 +50,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
