--- a/technology.html
+++ b/technology.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Technology Dashboard</title>
+    <title>Technology departments</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -18,7 +18,7 @@
 
 <!-- Sidebar -->
 <nav class="sidebar" id="sidebar">
-    <h4 class="logo">Technology</h4>
+    <h4 class="logo">Technology departments</h4>
     <a href="cs_exam.html" class="nav-link"><i class="bi bi-laptop-fill"></i> Computer Science</a>
     <a href="#it" class="nav-link"><i class="bi bi-pc-display"></i> IT</a>
     <a href="#survey" class="nav-link"><i class="bi bi-bar-chart-line-fill"></i> Survey</a>
@@ -52,3 +52,4 @@
 <script src="technology.js"></script>
 </body>
 </html>
+
