--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!-- Sidebar -->
 <nav class="sidebar" id="sidebar">
-    <h4 class="logo">Dashboard</h4>
+    <h4 class="logo">exit exam CS</h4>
     <a href="index.html"><i class="bi bi-house-fill"></i> Home</a>
     <a href="technology.html"><i class="bi bi-cpu-fill"></i> Technology</a>
     <a href="#"><i class="bi bi-heart-pulse-fill"></i> Health</a>
@@ -32,7 +32,7 @@
 <!-- Main Content -->
 <main class="content">
     <div class="empty-state">
-        <h2>Welcome</h2>
+        <h2>EXIT EXAM CS</h2>
         <p>Start exploring the platform</p>
 
         <!-- Get Started Button -->
@@ -49,3 +49,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
