--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+        <button onlcick="loadExam('AUTOMATA')">AUTOMATA Exam</button>
         <button onclick="loadExam('Jimmaa University')">Jimmaa University exam</button>
          <button onclick="loadExam('Finfinnee')">Finfinnee Exam</button>
          <button onclick="loadExam('Arbaminch')">Arbaminch Exam</button>
@@ -51,6 +52,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
