--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+         <button onclick="loadExam('model')">model Exam</button>
          <button onclick="loadExam('RVU')">RVU Exam</button>
          <button onclick="loadExam('MOE')">MOE Exam</button>
          <button onclick="loadExam('OBU')">OBU Exam</button>
@@ -55,6 +56,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
