--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,9 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2>
+         <button onclick="loadExam('wsu1')">wsu1 Exam</button>
+         <button onclick="loadExam('wsu2')">wsu2 Exam</button>
+         <button onclick="loadExam('wsu3')">wsu3 Exam</button>
          <button onclick="loadExam('model')">model Exam</button>
          <button onclick="loadExam('RVU')">RVU Exam</button>
          <button onclick="loadExam('MOE')">MOE Exam</button>
@@ -56,6 +59,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
