--- a/cs_exam.html
+++ b/cs_exam.html
@@ -10,7 +10,8 @@
 
     <!-- Sidebar Navbar -->
     <div class="navbar">
-        <h2>Exams</h2>
+        <h2>Exams</h2> 
+         <button onclick="loadExam('hu')">hu Exam</button> 
          <button onclick="loadExam('wsu1')">wsu1 Exam</button>
          <button onclick="loadExam('wsu2')">wsu2 Exam</button>
          <button onclick="loadExam('wsu3')">wsu3 Exam</button>
@@ -59,6 +60,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
