--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,7 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2> 
+         <button onclick="loadExam('admasu')">admasu Exam</button> 
          <button onclick="loadExam('hu')">hu Exam</button> 
          <button onclick="loadExam('wsu1')">wsu1 Exam</button>
          <button onclick="loadExam('wsu2')">wsu2 Exam</button>
@@ -60,6 +61,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
