--- a/cs_exam.html
+++ b/cs_exam.html
@@ -11,6 +11,8 @@
     <!-- Sidebar Navbar -->
     <div class="navbar">
         <h2>Exams</h2> 
+         <button onclick="loadExam('admasu3')">admasu3 Exam</button> 
+         <button onclick="loadExam('admas2')">admasu2 Exam</button> 
          <button onclick="loadExam('admasu')">admasu Exam</button> 
          <button onclick="loadExam('hu')">hu Exam</button> 
          <button onclick="loadExam('wsu1')">wsu1 Exam</button>
@@ -61,6 +63,7 @@
     <script src="cs_exam.js"></script>
 </body>
 </html>
+
 
 
 
